--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,2 +1,1 @@
-<h1>Companies#show</h1>
-<p>Find me in app/views/companies/show.html.erb</p>
+<div id="companies-show" data-company-id="<%= @company.id %>"></div>
